--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,9 +17,12 @@
 }
 
 .lmj-plant-name {
-    font-size: 15px;
+
     color: rgb(255, 255, 255);
     padding: 0px 15px;
+    font-weight: 500;
+    font-size: 20px;
+    margin: 10px 0px;
 
 }
 
