--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,31 +1,64 @@
 .lmj-cart {
     color: white;
-    background-color: #31b572;
+    background-color: #31b57383;
     padding: 32px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     width: 300px;
     position: absolute;
+    backdrop-filter: blur(5px);
+    left: 0%;
+    z-index: 1000;
+    font-family: -apple-system, BlinkMacSystemFont, 'Lobster',
+        sans-serif;
+
 }
 
 .lmj-cart-contain {
     position: absolute;
+    left: 0%;
+    top: 26%;
 }
 
 
 
-.lmj-cart-closed,
+
 .lmj-cart-open {
     border-radius: 25px;
     outline: none;
     cursor: pointer;
     border: #31b572;
-    font-size: 15px;
-    color: #31b572;
+    font-size: 18px;
+    font-weight: 300;
     height: 50px;
     width: 200px;
     margin: 25px;
+    color: #ffffffc5;
+    background-color: #31b573de;
+    font-weight: bolder;
+
+    font-family: -apple-system, BlinkMacSystemFont, 'Lobster',
+        sans-serif;
+
+
+
+}
+
+.lmj-cart-closed {
+    border-radius: 25px;
+    outline: none;
+    cursor: pointer;
+    border: #31b572;
+    font-size: 25px;
+    color: #ffffff;
+    height: 50px;
+    width: 200px;
+    margin: 25px;
+    background-color: #31b573de;
+    font-weight: bolder;
+    font-family: -apple-system, BlinkMacSystemFont, 'Lobster',
+        sans-serif;
 
 
 }
@@ -48,9 +81,12 @@
     cursor: pointer;
     border: #31b572;
     font-size: 15px;
-    color: #31b572;
+    color: #ffffff;
+    background-color: #31b573de;
     height: 25px;
     width: 100px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Lobster',
+        sans-serif;
 
 
 }
@@ -61,9 +97,12 @@
     cursor: pointer;
     border: #31b572;
     font-size: 15px;
-    color: #31b572;
+    color: #ffffff;
+    background-color: #31b573de;
     height: 50px;
     width: 100px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Lobster',
+        sans-serif;
 }
 
 .lmj-cart-img {
