--- a/src/components/ShoppingList/ShoppingList.css
+++ b/src/components/ShoppingList/ShoppingList.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 @keyframes notslid {
     0% {
         margin-left: -100px;
@@ -66,7 +68,9 @@
     justify-content: center;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: whitesmoke;
+    font-family: -apple-system, BlinkMacSystemFont, 'Lobster',
+        sans-serif;
+    color: greenyellow;
 }
 
 .lmj-best-sale {
