--- a/src/pages/Plants.css
+++ b/src/pages/Plants.css
@@ -10,18 +10,28 @@
 
 }
 
+.Product-title {
+    text-align: center;
+    font-size: 50px;
+    margin: 20px 0px 0px 0px;
+    text-shadow: -4px -2px 4px rgb(0, 0, 0);
+    color: white;
+}
+
 .Product-contain {
     border-radius: 50px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    margin: 100px 50px 50px 50px;
+    margin: 60px 50px 50px 50px;
     width: 93%;
 
 }
 
 .Product-img {
-    width: 800px;
+    width: 355px;
+    object-fit: cover;
+    height: 533px;
     border-radius: 50px;
     -webkit-box-shadow: 1px 1px 15px 2px rgba(0, 0, 0, 0.56);
     box-shadow: 1px 1px 15px 5px rgba(0, 0, 0, 0.767);
@@ -33,6 +43,7 @@
     border-radius: 50px;
     width: 25%;
     display: flex;
+    font-weight: bolder;
     flex-direction: column;
     align-items: center;
     background-color: #31b57365;
@@ -63,11 +74,15 @@
     outline: none;
     cursor: pointer;
     border: #31b572;
-    font-size: 15px;
-    color: #31b572;
+    font-size: 25px;
+    color: #ffffffc5;
+    background-color: #31b573b9;
+    font-weight: bolder;
     height: 50px;
     width: 250px;
+
 }
+
 
 .Product-btn-price {
     display: flex;
